# pandora

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_STYLE.md  LICENSE  README.md
include/pandora/ADT/: StringRef.h  iterator_range.h
include/pandora/Support/: CommandLine.h  Compiler.h  Utils.h
include/pandora/Util/: crtp.hpp  option.hpp  result.hpp
lib/Support/: CommandLine.cpp  Utils.cpp
